# AA-Arch

./: .gitignore  .gitmodules  CMakeLists.txt  KnuthMorrisPrattScenario.json  LICENSE  README.md  benchmark_results.csv  compile_commands.json  json
.github/workflows/: main.yml
benchmark/: CMakeLists.txt  benchmark.cpp  config.json  main.cpp  results.json
benchmark/results/: KnuthMorrisPrattScenario.json
benchmark/tasks/: benchKnuthMorrisPratt.cpp
benchmark/template/include/: benchAlgorithm.hpp  benchmark.hpp  runScenario.hpp
benchmark/template/src/: benchAlgorithm.cpp  benchmark.cpp  runScenario.cpp
docs/: ContributionGuide.md  Requirements.md  benchmarkReport.md  libAlgorithmsDescription.md  libArchitectureDescription.md
docs/benchmarkResults/: Debian.json  Ubuntu.json  Windows.json
include/: AhoCorasick.hpp  BoyerMoore.hpp  KnuthMorrisPratt.hpp  LCS.hpp  Naive.hpp  RabinCarp.hpp  ZFunction.hpp  algorithm.hpp
src/: AhoCorasick.cpp  BoyerMoore.cpp  KnuthMorrisPratt.cpp  LCS.cpp  Naive.cpp  RabinCarp.cpp  ZFunction.cpp
test/: CMakeLists.txt  README.md  test.cpp
test/corner_case/: corner_case_template.hpp  testAhoCorasickCorner.cpp
test/stress/: testAhoCorasickStress.cpp
test/template/include/: corner_case.hpp  random_test.hpp
test/template/multipattern_search/: corner_case_template.hpp  random_template.hpp
test/template/src/: corner_case.cpp  random_test.cpp
test/test_suites/corner_case/: testAhoCorasickCorner.cpp  testKnuthMorrisPrattCorner.cpp  test_BoyerMoore_Corner.cpp  test_LCS_Corner.cpp  test_Naive_Corner.cpp  test_RabinCarp_Corner.cpp  test_ZFunction_Corner.cpp
test/test_suites/random/: testAhoCorasickRandom.cpp  test_BoyerMoore_Random.cpp  test_KnuthMorrisPratt_Random.cpp  test_LCS_Random.cpp  test_Naive_Random.cpp  test_RabinCarp_Random.cpp  test_ZFunction_Random.cpp
test/test_suites/unit/: testAhoCorasickUnit.cpp  test_BoyerMoore_Unit.cpp  test_KnuthMorrisPratt_Unit.cpp  test_RabinCarp_Unit.cpp  test_ZFunction_Unit.cpp
test/util/: alphabets.hpp
util/: alphabets.hpp  util.cpp  util.hpp
